@@ -40,6 +40,10 @@ to develope Perl modules related to character encoding.</p>
 href="Encode-EUCJP1997OPENNEC-0.01.tar.gz"><code>Encode::EUCJP1997OPENNEC</code></a>
 (tar + gzip, 88ko)
 
+<dt><a
+href="Encode-EUCJPSW-0.01.tar.gz"><code>Encode::EUCJPSW</code></a>
+(tar + gzip, 88ko)
+
 <dt><a href="Encode-ShiftJIS1997-0.01.tar.gz"><code>Encode::ShiftJIS1997</code></a>
 (tar + gzip, 45ko)</dt>
   <dd>It is necessary to install this Perl module if you
