@@ -1,5 +1,11 @@
 2008-11-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* Makefile: New rules for Encode::EUCJPSW.
+
+	* readme.en.html: A link to the new module is added.
+
+2008-11-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* Makefile: Set the encoding name for Encode::EUCJP1997OPENNEC.
 
 2008-11-08  Wakaba  <wakaba@suika.fam.cx>
